<?xml version="1.0"?>
<package format="2">
  <name>leica_scanstation_msgs</name>
  <version>0.0.0</version>
  <description>The leica_scanstation_msgs package</description>

  <author email="imlara@catec.aero">Ines Lara Sicilia</author>
  <maintainer email="imlara@catec.aero">Ines Lara Sicilia</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>

</package>
