<?xml version="1.0"?>
<package format="2">
  <name>leica_scanstation_ros</name>
  <version>0.0.0</version>
  <description>The leica_scanstation_ros package</description>

  <author email="imlara@catec.aero">Ines Lara Sicilia</author>
  <maintainer email="imlara@catec.aero">Ines Lara Sicilia</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>leica_scanstation_utils</depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>leica_scanstation_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
   
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

</package>
